// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1049.9090833947007,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1049.9090833947007,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": -84.63931936533464,
    },
    "isLeaf": false,
    "length": 577.4499958670854,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": 204.08567856820804,
    },
    "path": "/root/src",
    "visible": true,
    "width": 367.4681791881452,
    "x0": 356.9690883541982,
    "y0": 20.998181667894013,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 236.19539803536262,
      "y": 6,
      "z": -128.83757536213102,
    },
    "isLeaf": false,
    "length": 315.96430581939404,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 236.19539803536262,
      "y": 6,
      "z": 29.14457754756603,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 231.50495288853148,
    "x0": 370.4429215910969,
    "y0": 42.17134818302048,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 178.31915981322976,
      "y": 6,
      "z": 228.2919157686969,
    },
    "isLeaf": false,
    "length": 197.96619050231192,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 294.07163625749547,
      "y": 6,
      "z": 228.2919157686969,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 231.50495288853148,
    "x0": 370.4429215910969,
    "y0": 379.30882051754094,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 159.02708040585216,
      "y": 506,
      "z": -118.25099210456777,
    },
    "isLeaf": true,
    "length": 273.6179727891411,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 159.02708040585216,
      "y": 506,
      "z": 18.557994290002796,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 50.22065115571314,
    "x0": 383.9167548279956,
    "y0": 63.34451469814694,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 222.72156479846396,
      "y": 506,
      "z": -118.25099210456777,
    },
    "isLeaf": true,
    "length": 273.6179727891411,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 222.72156479846396,
      "y": 506,
      "z": 18.557994290002796,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 50.22065115571314,
    "x0": 447.6112392206074,
    "y0": 63.34451469814694,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 190.87432260215806,
      "y": 506,
      "z": 189.3869514006822,
    },
    "isLeaf": true,
    "length": 155.61985747205892,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 190.87432260215806,
      "y": 506,
      "z": 267.1968801367117,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 113.91513554832494,
    "x0": 383.9167548279956,
    "y0": 400.48198703266746,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 91.2204521032777,
      "y": 4,
      "z": 537.4318125460254,
    },
    "isLeaf": false,
    "length": 314.9727250184102,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 353.69772295195287,
      "y": 4,
      "z": 537.4318125460254,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 524.9545416973502,
    "x0": 209.98181667894013,
    "y0": 629.9454500368204,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -3.271365402245351,
      "y": 6,
      "z": 417.7421770390296,
    },
    "isLeaf": false,
    "length": 62.99454500368199,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 49.22408876748966,
      "y": 6,
      "z": 417.7421770390296,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 104.99090833947002,
    "x0": 220.48090751288714,
    "y0": 636.2449045371886,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -6.055215244579784,
      "y": 506,
      "z": 417.74217703902957,
    },
    "isLeaf": true,
    "length": 51.540991366648996,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 21.78328317876455,
      "y": 506,
      "z": 417.74217703902957,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 55.67699684668867,
    "x0": 230.02553554374805,
    "y0": 641.9716813557051,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 295.95272336524425,
      "y": 6,
      "z": 619.3247210508121,
    },
    "isLeaf": false,
    "length": 151.1869080088369,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 421.94181337260835,
      "y": 6,
      "z": 619.3247210508121,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 251.9781800147282,
    "x0": 482.9581783615622,
    "y0": 793.7312670463937,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 264.11308920577454,
      "y": 506,
      "z": 565.2589680780868,
    },
    "isLeaf": true,
    "length": 46.670741167945266,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 264.11308920577454,
      "y": 506,
      "z": 588.5943386620594,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 29.443102556068766,
    "x0": 499.39153792774016,
    "y0": 803.5912827861005,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 309.98955132802126,
      "y": 506,
      "z": 565.2589680780868,
    },
    "isLeaf": true,
    "length": 46.670741167945266,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 309.98955132802126,
      "y": 506,
      "z": 588.5943386620594,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 29.443102556068766,
    "x0": 545.2680000499869,
    "y0": 803.5912827861005,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 355.8660134502679,
      "y": 506,
      "z": 565.2589680780868,
    },
    "isLeaf": true,
    "length": 46.670741167945266,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 355.8660134502679,
      "y": 506,
      "z": 588.5943386620594,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 29.44310255606888,
    "x0": 591.1444621722335,
    "y0": 803.5912827861005,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 401.74247557251465,
      "y": 506,
      "z": 565.2589680780868,
    },
    "isLeaf": true,
    "length": 46.670741167945266,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 401.74247557251465,
      "y": 506,
      "z": 588.5943386620594,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 29.44310255606888,
    "x0": 637.0209242944802,
    "y0": 803.5912827861005,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 268.22142909731906,
      "y": 506,
      "z": 619.3247210508121,
    },
    "isLeaf": true,
    "length": 18.405362714119292,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 305.88121143647675,
      "y": 506,
      "z": 619.3247210508121,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 75.31956467831549,
    "x0": 499.39153792774016,
    "y0": 860.1220396937524,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 268.22142909731906,
      "y": 506,
      "z": 647.5900995046381,
    },
    "isLeaf": true,
    "length": 18.405362714119292,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 305.88121143647675,
      "y": 506,
      "z": 647.5900995046381,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 75.31956467831549,
    "x0": 499.39153792774016,
    "y0": 888.3874181475785,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 268.22142909731906,
      "y": 506,
      "z": 675.8554779584642,
    },
    "isLeaf": true,
    "length": 18.405362714119292,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 305.88121143647675,
      "y": 506,
      "z": 675.8554779584642,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 75.31956467831549,
    "x0": 499.39153792774016,
    "y0": 916.6527966014046,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 355.8660134502679,
      "y": 506,
      "z": 621.7897249857388,
    },
    "isLeaf": true,
    "length": 46.67074116794538,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 355.8660134502679,
      "y": 506,
      "z": 645.1250955697114,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 29.44310255606888,
    "x0": 591.1444621722335,
    "y0": 860.1220396937524,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 401.74247557251465,
      "y": 506,
      "z": 621.7897249857388,
    },
    "isLeaf": true,
    "length": 46.67074116794538,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 401.74247557251465,
      "y": 506,
      "z": 645.1250955697114,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 29.44310255606888,
    "x0": 637.0209242944802,
    "y0": 860.1220396937524,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 359.9743533418124,
      "y": 506,
      "z": 675.8554779584642,
    },
    "isLeaf": true,
    "length": 18.405362714119292,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 397.6341356809702,
      "y": 506,
      "z": 675.8554779584642,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 75.3195646783156,
    "x0": 591.1444621722335,
    "y0": 916.6527966014046,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.76450198781714,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670057,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.97627688842624,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.61160159025366,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -35.02586849263764,
      "y": 506,
      "z": -41.82903913309477,
    },
    "isLeaf": true,
    "length": 208.18611269461223,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -35.02586849263764,
      "y": 506,
      "z": 62.26401721421135,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 148.36669690725205,
    "x0": 140.79078305373633,
    "y0": 156.12443269325217,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.576450198781686,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 114.54431644391573,
      "y": 506,
      "z": 201.35711202366053,
    },
    "isLeaf": true,
    "length": 41.27631283835194,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 114.54431644391573,
      "y": 506,
      "z": 221.9952684428365,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 17.924270406868402,
    "x0": 355.58218124048153,
    "y0": 441.03803381407255,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -226.52493947966533,
      "y": 502,
      "z": 459.587056637389,
    },
    "isLeaf": true,
    "length": 15.650040346889682,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -226.52493947966533,
      "y": 502,
      "z": 467.41207681083387,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": 23.475060520334676,
    "y0": 705.6745465506666,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.76450198781714,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670057,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.97627688842624,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.61160159025366,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -35.02586849263764,
      "y": 506,
      "z": -41.82903913309477,
    },
    "isLeaf": true,
    "length": 208.18611269461223,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -35.02586849263764,
      "y": 506,
      "z": 62.26401721421135,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 148.36669690725205,
    "x0": 140.79078305373633,
    "y0": 156.12443269325217,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.576450198781686,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 114.54431644391573,
      "y": 506,
      "z": 201.35711202366053,
    },
    "isLeaf": true,
    "length": 41.27631283835194,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 114.54431644391573,
      "y": 506,
      "z": 221.9952684428365,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 17.924270406868402,
    "x0": 355.58218124048153,
    "y0": 441.03803381407255,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -226.52493947966533,
      "y": 502,
      "z": 459.587056637389,
    },
    "isLeaf": true,
    "length": 15.650040346889682,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -226.52493947966533,
      "y": 502,
      "z": 467.41207681083387,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": 23.475060520334676,
    "y0": 705.6745465506666,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -79.5,
      "y": 2,
      "z": -164.75,
    },
    "isLeaf": false,
    "length": 341,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -79.5,
      "y": 2,
      "z": 5.75,
    },
    "path": "/root",
    "visible": true,
    "width": 341,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -117.5,
      "y": 4,
      "z": -152.75,
    },
    "isLeaf": true,
    "length": 293,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -117.5,
      "y": 4,
      "z": -6.25,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 217,
    "x0": 24,
    "y0": 24,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -171.75,
      "y": 502,
      "z": 79,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -63.25,
      "y": 502,
      "z": 79,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 217,
    "x0": 24,
    "y0": 329,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -73.5,
      "y": 2,
      "z": -161.75,
    },
    "isLeaf": false,
    "length": 353,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -73.5,
      "y": 2,
      "z": 14.75,
    },
    "path": "/root",
    "visible": true,
    "width": 353,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -191.1541519434629,
      "y": 4,
      "z": -153.75,
    },
    "isLeaf": true,
    "length": 321,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -191.1541519434629,
      "y": 4,
      "z": 6.75,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 85.6916961130742,
    "x0": 16,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -64.65415194346289,
      "y": 4,
      "z": -153.75,
    },
    "isLeaf": false,
    "length": 321,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -64.65415194346289,
      "y": 4,
      "z": 6.75,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 135.30830388692578,
    "x0": 117.6916961130742,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -99.15415194346289,
      "y": 6,
      "z": -199.13626292466765,
    },
    "isLeaf": true,
    "length": 75.4549483013294,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -99.15415194346289,
      "y": 6,
      "z": -161.40878877400297,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 34.308303886925785,
    "x0": 133.69169611307422,
    "y0": 32,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -99.15415194346289,
      "y": 6,
      "z": -77.15878877400296,
    },
    "isLeaf": true,
    "length": 197.5450516986706,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -99.15415194346289,
      "y": 6,
      "z": 21.613737075332338,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 34.308303886925785,
    "x0": 133.69169611307422,
    "y0": 123.4549483013294,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -107.73122791519434,
      "y": 504,
      "z": 79,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": -90.57707597173145,
      "y": 504,
      "z": 79,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 34.308303886925785,
    "x0": 133.69169611307422,
    "y0": 329,
    "z0": 4,
  },
]
`;
